--- a/homeworks/src/p2-homeworks/h1/Message.module.css
+++ b/homeworks/src/p2-homeworks/h1/Message.module.css
@@ -2,11 +2,11 @@
     display: flex;
     /*grid-template-columns: 3fr 5fr;*/
     background-color: #cffcdf;
-    width: 400px;
     border-radius: 10px;
+    width: 400px;
     margin: 20px;
     padding: 10px;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .chat img {
@@ -17,6 +17,7 @@
     margin-right: 10px;
 }
 
+
 .message {
     margin-top: 5px;
     color: #fff;
@@ -25,7 +26,7 @@
     grid-template-areas: "n t" "m t";
     background-color: green;
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 20px 20px 20px 0;
     align-self: flex-start;
     word-wrap: break-word;
 }
@@ -36,7 +37,7 @@
     font-weight: bold;
 }
 
-.message .message_content {
+.message .text {
     grid-area: m;
 }
 
