first commit in webstorm

--- a/homeworks/src/p2-homeworks/h2/Affairs.module.css
+++ b/homeworks/src/p2-homeworks/h2/Affairs.module.css
@@ -9,3 +9,19 @@
 .priority {
     margin-left: 10px;
 }
+
+.red {
+    color: red;
+}
+
+.orange {
+    color: orange;
+}
+
+.green {
+    color: green;
+}
+
+.black {
+    color: black
+}
