--- a/homeworks/src/p2-homeworks/h2/Affairs.module.css
+++ b/homeworks/src/p2-homeworks/h2/Affairs.module.css
@@ -3,11 +3,13 @@
 }
 
 .name {
-
+ margin-right: 5px;
 }
 
 .priority {
     margin-left: 10px;
+    font-weight: bold;
+    color: blueviolet;
 }
 
 .red {
