--- a/homeworks/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/homeworks/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,11 +1,34 @@
-.superInput {
-
+.superInput[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
 }
 
-.errorInput {
-    border: 3px solid lime;
-    background: red;
+.superInput[type=text]:focus {
+  border: 3px solid #555;
 }
+
+.errorInput[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  background: rgba(255,0,6,0.49);
+}
+
+.errorInput[type=text]:focus {
+  border: 3px solid #555;
+}
+
 
 .error {
     color: red;
