--- a/homeworks/src/p2-homeworks/h3/Greeting.module.css
+++ b/homeworks/src/p2-homeworks/h3/Greeting.module.css
@@ -6,8 +6,9 @@
     color: red;
     font-weight: bold;
     position: absolute;
-    bottom: -40px;
-    left: 0;
+    bottom: -20px;
+
+    left: 35px;
 
 }
 
