--- a/homeworks/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/homeworks/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,4 +1,4 @@
-.defaultButton {
+.default {
   display: inline-block;
   padding: 10px 15px;
   font-size: 20px;
@@ -14,9 +14,9 @@
   margin-bottom: 15px;
 }
 
-.defaultButton:hover {background-color: #3e8e41}
+.default:hover {background-color: #3e8e41}
 
-.defaultButton:active {
+.default:active {
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
@@ -43,6 +43,30 @@
 
 .redButton:active {
   background-color: rgba(255,10,7,0.82);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.disabled {
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 20px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: rgba(172,170,170,0.82);
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  margin-bottom: 15px;
+}
+
+.disabled:hover {background-color: rgba(69,67,67,0.82)}
+
+.disabled:active {
+  background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
